nginx-ingress-ssl-cert-manager/kubernetes-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberada-python
  labels:
    app: python-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-dev
  template:
    metadata:
      labels:
        app: python-dev
    spec:
      containers:
      - name: python-dev-frontend
        image: ghcr.io/colossus06/frontend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: kuberada-python-svc
spec:
  selector:
    app: python-dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
